[package]
name = "essentia_browser_plugin"
description = "Pure Rust browser engine with consciousness integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository = "https://github.com/Essentia-Services-Development/essentia_browser_plugin"
keywords = ["essentia", "browser", "rendering", "web", "plugin"]
categories = ["web-programming", "gui"]

[dependencies]
# Core dependencies (workspace inheritance)
essentia_core = { workspace = true }
essentia_traits = { workspace = true }
essentia_plugin_system = { workspace = true }
essentia_ffui = { workspace = true }
essentia_consciousness = { workspace = true }

[dev-dependencies]

[features]
default = []

[lib]
name = "essentia_browser_plugin"
path = "src/lib.rs"
